# risk-scoring-model

./: .gitignore  EVALUATION.md  MODEL_CARD.md  README.md  pyproject.toml  requirements-test.txt  technical_document.md
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: generate_synthetic_data.py
src/risk_scoring/: __init__.py  config.py  data.py  evaluation.py  modeling.py  monitoring.py  score.py  train.py
src/risk_scoring_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_evaluation.py  test_monitoring.py
